Port to 1.19-1.19.2 fabric